Provisional fix for markdown question spacing
Tried getting showdown to render <br/> elements with limited success. Followed the instructions in their docs but nothing worked, what I wanted to do worked on their test site. Needs a bit more investigating. For now added a padding-top to all markdown rendered h3 elements, this should be working. Had to edit bootstrap to stop a h3 style applying, I have no remorse, bootstrap needs to pipe down and respect my important

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -353,6 +353,10 @@ a:active {
     margin-bottom: 50px;
 }
 
+.rendered-markdown h3 {
+    padding-top: 50px !important;
+}
+
 /* telugu */
 @font-face {
     font-family: 'Hind Guntur';
